// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`pages deploy > with wrangler.json configuration > should always deploy to the Pages project specified by the top-level \`name\` configuration field, regardless of the corresponding env-level configuration 1`] = `"f8352930be2817a08c63c3e742d07a79dd080b48629186d000b8029a3a46ecc3"`;

exports[`pages deploy > with wrangler.json configuration > should always deploy to the Pages project specified by the top-level \`name\` configuration field, regardless of the corresponding env-level configuration 2`] = `
"✨ Success! Uploaded 1 files (TIMINGS)

✨ Compiled Worker successfully
✨ Uploading Worker bundle
🌎 Deploying...
✨ Deployment complete! Take a peek over at https://abcxyz.pages-project.pages.dev/"
`;

exports[`pages deploy > with wrangler.json configuration > should error if user attempts to specify a custom config file path 1`] = `[Error: Pages does not support custom paths for the Wrangler configuration file]`;

exports[`pages deploy > with wrangler.json configuration > should support wrangler.json 1`] = `"fba80c98085b0cf492d832f1a5bf27c09f8ace84c721ccc315e0362074f9fe5d"`;

exports[`pages deploy > with wrangler.json configuration > should support wrangler.json 2`] = `
"✨ Success! Uploaded 1 files (TIMINGS)

✨ Compiled Worker successfully
✨ Uploading Worker bundle
🌎 Deploying...
✨ Deployment complete! Take a peek over at https://abcxyz.pages-is-awesome.pages.dev/"
`;

exports[`pages deploy > with wrangler.json configuration > should warn and ignore the config file, if it doesn't specify the \`pages_build_output_dir\` field 1`] = `[Error: Must specify a project name.]`;

exports[`pages deploy > with wrangler.toml configuration > should always deploy to the Pages project specified by the top-level \`name\` configuration field, regardless of the corresponding env-level configuration 1`] = `"b5f53af7922efd0f0b73c7bf288f7e3f14df5c31e8b654e98027ddf85ea7e574"`;

exports[`pages deploy > with wrangler.toml configuration > should always deploy to the Pages project specified by the top-level \`name\` configuration field, regardless of the corresponding env-level configuration 2`] = `
"✨ Success! Uploaded 1 files (TIMINGS)

✨ Compiled Worker successfully
✨ Uploading Worker bundle
🌎 Deploying...
✨ Deployment complete! Take a peek over at https://abcxyz.pages-project.pages.dev/"
`;

exports[`pages deploy > with wrangler.toml configuration > should error if user attempts to specify a custom config file path 1`] = `[Error: Pages does not support custom paths for the Wrangler configuration file]`;

exports[`pages deploy > with wrangler.toml configuration > should support wrangler.toml 1`] = `"62e8895a4896fc18db089b5590f7ecce38de8c1f38b515b1861da4bfd6ae7596"`;

exports[`pages deploy > with wrangler.toml configuration > should support wrangler.toml 2`] = `
"✨ Success! Uploaded 1 files (TIMINGS)

✨ Compiled Worker successfully
✨ Uploading Worker bundle
🌎 Deploying...
✨ Deployment complete! Take a peek over at https://abcxyz.pages-is-awesome.pages.dev/"
`;

exports[`pages deploy > with wrangler.toml configuration > should warn and ignore the config file, if it doesn't specify the \`pages_build_output_dir\` field 1`] = `[Error: Must specify a project name.]`;
